fixed overflow bug in checkGroup

--- a/src/CheckGroup/style.css
+++ b/src/CheckGroup/style.css
@@ -8,6 +8,7 @@
     border-radius: var(--radius-small);
     padding: var(--size-3) 0;
     overflow-y: auto;
+    position: relative;
     margin: var(--size-2) 0;
 
     & .ola_check {
